[package]
name = "pinion"
version = "0.1.0"
edition = "2021"
categories = []

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-graphql = { version = "5" , features = ["tracing", "chrono", "dataloader"]}
async-graphql-warp = { version = "5" }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
bdays = "0.1"
cached = "0.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "json", "postgres", "chrono", "offline", "macros" ] }
hex = "0.4"
base64 = "0.20.0"
ring = "0.16"
dotenv = "0.15"
lazy_static = "1"
thiserror = "1"
async-trait = "0.1"
itertools = "0.10"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
